# MovieChatbot

./: .env.example  .gitignore  EDA.ipynb  LoadAndStore.py  Query Relevancy.md  README.md  chatbot_graph_dev.ipynb  chatbot_graph_playground.ipynb  chatbot_graph_playground.py  create_tables.py  docker-compose.yml  logger.py  pipeline.py  pyproject.toml  relevance_gate_explained.md  search.py  understanding.md
chatbot/: Dockerfile.api  Dockerfile.ui
chatbot/api/: config.py  main.py
chatbot/api/graph/: builder.py  nodes.py  schema.py  state.py
chatbot/api/llm/: factory.py
chatbot/api/routes/: chat.py
chatbot/api/tools/: sql_tool.py
chatbot/ui/: app.py
db/: __init__.py  neo4j_session.py  postgres_session.py  session.py
models/: __init__.py  base.py  name_basics.py  title_akas.py  title_basics.py  title_crew.py  title_episode.py  title_principals.py  title_ratings.py
relevance_gate/: __init__.py  config.py  data_generation.py  data_io.py  embedding_classifier.py  evaluation.py  exceptions.py  finetuned_classifier.py  label_derivation.py  query_logger.py  relevance_classifier.py  schemas.py  tier1_ensemble.py  train_pipeline.py  utils.py  zero_shot_classifier.py
search_engine/: __init__.py  base.py  news_search.py
test/: smoke_test.py  test_finetuned_classifier.py  test_train_pipeline.py
