[project]
name = "imdb-data-ingestor"
version = "0.1.0"
description = "Ingesting data from IMDB for further usage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "jupytext>=1.19.3",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]
