[project]
name = "imdb-data-ingestor"
version = "0.1.0"
description = "Ingesting data from IMDB for further usage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "fastparquet>=2026.3.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "jupytext>=1.19.3",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "matplotlib>=3.10.9",
    "neo4j>=6.2.0",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.58.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.49.0",
]
